--- a/tstapp/Templates/tstapp/categories.html
+++ b/tstapp/Templates/tstapp/categories.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %}TST - {{ title }}{%endblock title%}
+
 {% block content %}
 
 <section class="heroTitle">
