--- a/tstapp/templates/tstapp/index.html
+++ b/tstapp/templates/tstapp/index.html
@@ -41,6 +41,7 @@
       <img src="{% static 'tstapp/imgs/logos/Tyvek.svg' %}" class="item">
       <img src="{% static 'tstapp/imgs/logos/redwing.svg' %}" class="item">
       <img src="{% static 'tstapp/imgs/logos/3m.svg' %}" class="item">
+      <img src="{% static 'tstapp/imgs/logos/traverrse.jpeg' %}" class="item">
     </div>
   </section>
 
