--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <mate name="keywords" content="СИЗ, спецодежда, униформа, атырау, магазин">
+  <meta name="description" content="У нас вы можете приобрести средства индивидуальной защиты, спецодежду, рабочую обувь и многое другое">
   <link rel="icon" href='{% static "tstapp/imgs/favicon.svg" %}' sizes='any' type="image/svg+xml">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
