--- a/tstapp/templates/tstapp/about.html
+++ b/tstapp/templates/tstapp/about.html
@@ -12,7 +12,7 @@
 <div class="about">
   <div class="about-h"><h1>Кто мы?</h1></div>
   <div class="about-txt">
-    <p>TST - компания которая специализируемся на международных поставках высококачественных средств индивидуальной защиты, спецодежды, текстиля и сопутствующих услуг.</p>
+    <p>TST - компания которая специализируется на международных поставках высококачественных средств индивидуальной защиты, спецодежды, текстиля и сопутствующих услуг.</p>
   </div>
 </div>
 
