--- a/tstapp/static/tstapp/css/style.css
+++ b/tstapp/static/tstapp/css/style.css
@@ -226,7 +226,8 @@ footer{
       max-width: 100%;
       max-height: 100%;
       position: absolute;
-      top: 0;
+      top: 50%;
+      transform: translateY(-50%);
     }
   }
 
