--- a/tstapp/templates/tstapp/contacts.html
+++ b/tstapp/templates/tstapp/contacts.html
@@ -13,8 +13,15 @@
   <div class="contacts-card">
     <div class="adrs">
       <h1>Звоните</h1>
-      <p>По номеру телефона: <a href="tel:+77753650598"> +7 775 365 05 98</a></p>
-      <p>На Whatsapp: <a href="https://api.whatsapp.com/send/?phone=77022411250" target="_blank"> +7 775 365 05 98</a></p>
+      <p>По номеру телефона:</p>
+      <p><a href="tel:+77057917089"> +7 705 791 7089</a></p>
+      <p><a href="tel:+77022411250"> +7 702 241 1250</a></p>
+      <p><a href="tel:+77753650598"> +7 775 365 0598</a></p>
+      <br>
+      <p>На Whatsapp:</p>
+      <p><a href="https://api.whatsapp.com/send/?phone=+77057917089" target="_blank"> +7 705 791 7089</a></p>
+      <p><a href="https://api.whatsapp.com/send/?phone=+77022411250" target="_blank"> +7 702 241 1250</a></p>
+      <p><a href="https://api.whatsapp.com/send/?phone=+77753650598" target="_blank"> +7 775 365 0598</a></p>
     </div>
     <div class="adrs">
       <h1>Пишите</h1>
