--- a/tstapp/static/tstapp/css/style.css
+++ b/tstapp/static/tstapp/css/style.css
@@ -25,7 +25,7 @@ html {
   padding: .5rem;
   border-radius: var(--border-radius);
   &:hover {
-    background: var(--color-surf-0);
+    background: var(--color-surf-5);
   }
 }
 
@@ -33,7 +33,7 @@ html {
   padding: .5rem;
   cursor: default;
   border-radius: var(--border-radius);
-  background: var(--color-surf-0);
+  background: var(--color-surf-5);
 }
 
 header{
@@ -53,7 +53,7 @@ header{
 
   .logo_link{
     height: 1.5rem;
-    margin-right: 1rem;
+    margin-right: 2rem;
     
     img {
       height: 1.5rem;
@@ -61,7 +61,7 @@ header{
   }
 
   nav{
-    margin: auto;
+    margin: auto auto auto 0;
     height: 100%;
 
     a{
@@ -109,6 +109,58 @@ header{
   }
 }
 
+.header_search{
+  flex: 1;
+  display: flex;
+  align-items: center;
+  border-radius: var(--border-radius);
+  border: 1px solid rgba(0, 0, 0, .1);
+  padding: .5rem 1rem;
+  margin: auto 2rem;
+
+  &:focus {
+    outline: 2px solid var(--color-on-surf);
+  }
+
+  & input {
+    width: 100%;
+    font-size: 1rem;
+    border: none;
+    outline: none;
+    padding-left: 1rem;
+  }
+}
+
+.side_search{
+    display: flex;
+    align-items: center;
+    border-radius: var(--border-radius);
+    border: 1px solid rgba(0, 0, 0, .1);
+    padding: .5rem 1rem;
+    margin: 1rem 0.25rem;
+
+    &:focus {
+      outline: 2px solid var(--color-on-surf);
+    }
+
+    & input {
+      width: 100%;
+      font-size: 1rem;
+      border: none;
+      outline: none;
+      padding-left: 1rem;
+    }
+}
+
+.header_search-icon{
+  cursor:default;
+}
+
+.header_search-clean, .side_search-clean {
+  cursor: pointer;
+  visibility:hidden;
+}
+
 .burger{
   cursor: pointer;
   margin-left: auto;
@@ -150,10 +202,10 @@ footer{
   display: grid;
   grid-template-columns: auto 5rem;
   gap: 1rem;
-  margin: 2rem 1rem 0 1rem;
-  border-top-left-radius: var(--border-radius);
-  border-top-right-radius: var(--border-radius);
-  
+  margin: 2rem 1rem 1rem 1rem;
+  border-radius: var(--border-radius);
+  /*border-top-left-radius: var(--border-radius);
+  border-top-right-radius: var(--border-radius);*/
 
   .socialLinks{
     width: 5rem;
@@ -195,15 +247,15 @@ footer{
 
 .cards {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(18.75rem, 1fr));
-  grid-template-rows: max-content;
+  grid-template-columns: repeat(auto-fill, minmax(18.75rem, 25rem));/* 18.75rem, 1fr */
+  grid-auto-rows: max-content;
   gap: 1rem;
   padding: 1rem 0;
   justify-content: center;
 }
 
 .card {
-  max-width: 25rem;
+  /*max-width: 25rem;*/
   background: var(--color-surf-0);
   border-radius: var(--border-radius);
   padding: 1rem;
@@ -240,6 +292,7 @@ footer{
     justify-content: space-between;
     font-size: 0.75rem;
     line-height: 1.5rem;
+    margin-top: .5rem;
   }
 
   .title {
@@ -459,12 +512,17 @@ footer{
   grid-template-columns: auto 1fr;
 }
 
-.section-side{
-  padding: 1rem 1rem 1rem 0;
+.section-side, .section-side-h{
+  padding: 1rem;
+  border-radius: var(--border-radius);
+  background-color: var(--color-surf-0);
+  height: min-content;
+  margin-top: 1rem;
 }
 
-.section-side-h{
-  padding: 1rem 1rem 1rem 0;
+.cards_p_empty{
+  margin: 2.5rem 2rem 0 2rem;
+  font-size: 1.5rem;
 }
 
 .map{
@@ -580,13 +638,11 @@ footer{
 }
 
 @media (max-width:600px){
-  nav{
-    display: none;
-  }
-
+  nav{display: none;}
   .about{
     grid-template-columns: 1fr;
   }
+  .header_search{display: none;}
 }
 
 @media (min-width:601px) {  
