--- a/tstapp/templates/tstapp/index.html
+++ b/tstapp/templates/tstapp/index.html
@@ -4,11 +4,24 @@
 {% block title %}TST - Безопасность в деталях{% endblock title %}
 
 {% block content %}
-
+<!--
   <img src="{% static 'tstapp/imgs/hero-1.jpg' %}" alt="" class='index-hero'>
-
+-->
   <section class="slogan">
     <h1>Безопасность в деталях</h1>
+  </section>
+
+  <section class="weekProduct">
+    <div class="card">
+      <div class="imgbox">
+        <img src="{% static 'tstapp/imgs/week.jpg' %}">
+      </div>
+    </div>
+    <div class="card">
+      <div class="imgbox">
+        <img src="{% static 'tstapp/imgs/adv1.jpeg' %}">
+      </div>
+    </div>
   </section>
 
   <section class="lineProducts">
