--- a/tstapp/Templates/tstapp/categories.html
+++ b/tstapp/Templates/tstapp/categories.html
@@ -32,7 +32,7 @@
     {% endfor %}
   </div>
   <div class="cards">
-    {% for item in pi %}
+    {% for item in pi reversed %}
      <a class="card" href="{{ item.p.get_absolute_url }}">
         <!--<span class="material-symbols-rounded">favorite</span>-->
         <div class="imgbox">
