--- a/templates/base.html
+++ b/templates/base.html
@@ -110,8 +110,8 @@
       <a href="tel:+77057917089">+7 705 791 7089</a>
       <p>Артем Sales Manager:</p>
       <a href="tel:+77022411250">+7 702 241 1250</a>
-      <p>Куаныш Director: </p>
-      <a href="tel:+77753650598">+7 775 365 0598</a>
+      <p>Жамиля Sales Manager: </p>
+      <a href="tel:+77753650598">+7 778 005 6633</a>
     </div>
     <div class='footer_txt'>
       <a href="mailto:info@tst-group.kz">info@tst-group.kz</a>
