--- a/templates/base.html
+++ b/templates/base.html
@@ -114,12 +114,13 @@
       <a href="tel:+77753650598">+7 778 005 6633</a>
     </div>
     <div class='footer_txt'>
-      <a href="mailto:info@tst-group.kz">info@tst-group.kz</a>
       <a href="mailto:sales.lead@tst-group.kz">sales.lead@tst-group.kz</a>
       <a href="mailto:sales@tst-group.kz">sales@tst-group.kz</a>
+      <a href="mailto:info@tst-group.kz">info@tst-group.kz</a>
     </div>
 
     <div class='footer_txt'>
+      <img src="" alt="">
       <p>г. Атырау, пр. Исатая Тайманова, 128</p>
     </div>
 
