--- a/tstapp/Templates/tstapp/contacts.html
+++ b/tstapp/Templates/tstapp/contacts.html
@@ -19,14 +19,15 @@
       <p><a href="tel:+77753650598">Жамиля Sales Manager:  +7 778 005 6633</a></p>
       <br>
       <p>На Whatsapp:</p>
+      <p><a href="https://api.whatsapp.com/send/?phone=+77057917089" target="_blank">+7 705 791 7089</a></p>
       <p><a href="https://api.whatsapp.com/send/?phone=+77780056633" target="_blank">+7 778 005 6633</a></p>
     </div>
     <div class="adrs">
       <h1>Пишите</h1>
       <p>На почту: </p>
-      <p><a href="mailto:info@tst-group.kz">info@tst-group.kz</a></p>
       <p><a href="mailto:sales.lead@tst-group.kz">sales.lead@tst-group.kz</a></p>
       <p><a href="mailto:sales@tst-group.kz">sales@tst-group.kz</a></p>
+      <p><a href="mailto:info@tst-group.kz">info@tst-group.kz</a></p>
     </div>
     <div class="adrs">
       <h1>Приходите</h1>
