--- a/tstapp/templates/tstapp/about.html
+++ b/tstapp/templates/tstapp/about.html
@@ -37,4 +37,21 @@
   </div>
 </section>
 
+<section class="about">
+  <div class="about-h"><h1>Сертификаты</h1></div>
+  <div class="about-txt">
+    <a href="{% static 'tstapp/certs/iso9001kz.pdf' %}" target="_blank">Сертификат соответствия ISO 9001 kaz</a>
+    <a href="{% static 'tstapp/certs/iso9001ru.pdf' %}" target="_blank">Сертификат соответствия ISO 9001 rus</a>
+    <a href="{% static 'tstapp/certs/iso9001en.pdf' %}" target="_blank">Сертификат соответствия ISO 9001 eng</a>
+    <br>
+    <a href="{% static 'tstapp/certs/iso14001kz.pdf' %}" target="_blank">Сертификат соответствия ISO 14001 kaz</a>
+    <a href="{% static 'tstapp/certs/iso14001ru.pdf' %}" target="_blank">Сертификат соответствия ISO 14001 rus</a>
+    <a href="{% static 'tstapp/certs/iso14001en.pdf' %}" target="_blank">Сертификат соответствия ISO 14001 eng</a>
+    <br>
+    <a href="{% static 'tstapp/certs/iso45001kz.pdf' %}" target="_blank">Сертификат соответствия ISO 45001 kaz</a>
+    <a href="{% static 'tstapp/certs/iso45001ru.pdf' %}" target="_blank">Сертификат соответствия ISO 45001 rus</a>
+    <a href="{% static 'tstapp/certs/iso45001en.pdf' %}" target="_blank">Сертификат соответствия ISO 45001 eng</a>
+  </div>
+</section>
+
 {% endblock content %}
