--- a/tstapp/templates/tstapp/about.html
+++ b/tstapp/templates/tstapp/about.html
@@ -37,20 +37,53 @@
   </div>
 </section>
 
-<section class="about">
-  <div class="about-h"><h1>Сертификаты</h1></div>
-  <div class="about-txt">
-    <a href="{% static 'tstapp/certs/iso9001kz.pdf' %}" target="_blank">Сертификат соответствия ISO 9001 kaz</a>
-    <a href="{% static 'tstapp/certs/iso9001ru.pdf' %}" target="_blank">Сертификат соответствия ISO 9001 rus</a>
-    <a href="{% static 'tstapp/certs/iso9001en.pdf' %}" target="_blank">Сертификат соответствия ISO 9001 eng</a>
-    <br>
-    <a href="{% static 'tstapp/certs/iso14001kz.pdf' %}" target="_blank">Сертификат соответствия ISO 14001 kaz</a>
-    <a href="{% static 'tstapp/certs/iso14001ru.pdf' %}" target="_blank">Сертификат соответствия ISO 14001 rus</a>
-    <a href="{% static 'tstapp/certs/iso14001en.pdf' %}" target="_blank">Сертификат соответствия ISO 14001 eng</a>
-    <br>
-    <a href="{% static 'tstapp/certs/iso45001kz.pdf' %}" target="_blank">Сертификат соответствия ISO 45001 kaz</a>
-    <a href="{% static 'tstapp/certs/iso45001ru.pdf' %}" target="_blank">Сертификат соответствия ISO 45001 rus</a>
-    <a href="{% static 'tstapp/certs/iso45001en.pdf' %}" target="_blank">Сертификат соответствия ISO 45001 eng</a>
+<div class="about-title">
+  <h1>Сертификаты</h1>
+</div>
+<section class="certs">
+  <div class="certs_card">
+    <a href="{% static 'tstapp/imgs/certs/martor.jpg' %}" target="_blank">
+      <img src="{% static 'tstapp/imgs/certs/martor.jpg' %}" alt="">
+    </a>
+  </div>
+  <div class="certs_card">
+    <a href="{% static 'tstapp/imgs/certs/martor.jpg' %}" target="_blank">
+      <img src="{% static 'tstapp/imgs/certs/velilla.jpg' %}" alt="">
+    </a>
+  </div>
+</section>
+
+<div class="about-title"><h1>ISO Стандарты компании</h1></div>
+<section class="certs">
+  <div class="certs_card">
+    <img src="{% static 'tstapp/imgs/iso-9001.png' %}" alt="">
+    <p>Система менеджмента качества ISO 9001-2016</p>
+    <div class="certs_card_links">
+      <p>Скачать на:</p>
+      <a href="{% static 'tstapp/certs/iso9001kz.pdf' %}" target="_blank">Қаз</a>
+      <a href="{% static 'tstapp/certs/iso9001ru.pdf' %}" target="_blank">Рус</a>
+      <a href="{% static 'tstapp/certs/iso9001en.pdf' %}" target="_blank">Eng</a>
+    </div>
+  </div>
+  <div class="certs_card">
+    <img src="{% static 'tstapp/imgs/iso-14001.png' %}" alt="">
+    <p>Система экологического менеджмента ISO 14001-2016</p>
+    <div class="certs_card_links">
+      <p>Скачать на:</p>
+      <a href="{% static 'tstapp/certs/iso14001kz.pdf' %}" target="_blank">Қаз</a>
+      <a href="{% static 'tstapp/certs/iso14001ru.pdf' %}" target="_blank">Рус</a>
+      <a href="{% static 'tstapp/certs/iso14001en.pdf' %}" target="_blank">Eng</a>
+    </div>
+  </div>
+  <div class="certs_card">
+    <img src="{% static 'tstapp/imgs/iso-45001.png' %}" alt="">
+    <p>Система менеджмента безопастности труда и охраны здоровья</p>
+    <div class="certs_card_links">
+      <p>Скачать на:</p>
+      <a href="{% static 'tstapp/certs/iso45001kz.pdf' %}" target="_blank">Қаз</a>
+      <a href="{% static 'tstapp/certs/iso45001ru.pdf' %}" target="_blank">Рус</a>
+      <a href="{% static 'tstapp/certs/iso45001en.pdf' %}" target="_blank">Eng</a>
+    </div>
   </div>
 </section>
 
