--- a/tstapp/templates/tstapp/certs.html
+++ b/tstapp/templates/tstapp/certs.html
@@ -9,5 +9,17 @@
   <p>Сертификаты</p>
 </section>
 
+<section class="certs">
+  <div class="certs_card">
+    <a href="{% static 'tstapp/imgs/certs/martor.jpg' %}" target="_blank">
+      <img src="{% static 'tstapp/imgs/certs/martor.jpg' %}" alt="">
+    </a>
+  </div>
+  <div class="certs_card">
+    <a href="{% static 'tstapp/imgs/certs/martor.jpg' %}" target="_blank">
+      <img src="{% static 'tstapp/imgs/certs/velilla.jpg' %}" alt="">
+    </a>
+  </div>
+</section>
 
 {% endblock content %}
