--- a/templates/base.html
+++ b/templates/base.html
@@ -108,8 +108,8 @@
     <div class='footer_txt'>
       <p>Марина Sales Lead:</p>
       <a href="tel:+77057917089">+7 705 791 7089</a>
-      <p>Артем Sales Manager:</p>
-      <a href="tel:+77022411250">+7 702 241 1250</a>
+      <p>Захар Sales Manager:</p>
+      <a href="tel:+77753650598"> +7 702 584 6640</a>
       <p>Жамиля Sales Manager:</p>
       <a href="tel:+77753650598">+7 778 005 6633</a>
     </div>
