--- a/tstapp/templates/tstapp/contacts.html
+++ b/tstapp/templates/tstapp/contacts.html
@@ -15,7 +15,7 @@
       <h1>Звоните</h1>
       <p>По номеру телефона:</p>
       <p><a href="tel:+77057917089">Марина Sales Lead:  +7 705 791 7089</a></p>
-      <p><a href="tel:+77022411250">Артем Sales Manager:  +7 702 241 1250</a></p>
+      <p><a href="tel:+77753650598">Захар Sales Manager:  +7 702 584 6640</a></p>
       <p><a href="tel:+77753650598">Жамиля Sales Manager:  +7 778 005 6633</a></p>
       <br>
       <p>На Whatsapp:</p>
