--- a/tstapp/templates/tstapp/index.html
+++ b/tstapp/templates/tstapp/index.html
@@ -72,6 +72,7 @@
     <img src="{% static 'tstapp/imgs/logos/redwing.svg' %}" class="item">
     <img src="{% static 'tstapp/imgs/logos/3m.svg' %}" class="item">
     <img src="{% static 'tstapp/imgs/logos/traverrse.jpeg' %}" class="item">
+    <a href="https://safetygames360.kz/" target="_blank"><img src="{% static 'tstapp/imgs/logos/safetygames.jpeg' %}" class="item"></a>
   </div>
 </section>
 
