--- a/tstapp/static/tstapp/css/style.css
+++ b/tstapp/static/tstapp/css/style.css
@@ -299,6 +299,57 @@ footer{
   }
 }
 
+.sg360{
+  max-width: 1200px;
+  padding: 1rem;
+  margin: 2rem auto;
+  border-radius: var(--border-radius);
+
+  img{
+    width: 100%;
+    border-radius: var(--border-radius);
+    margin-bottom: 1rem;
+  }
+
+  a{
+    display:inline-block;
+    color: blue;
+    font-weight: 600;
+  }
+
+  h1, h2, ul, p{
+    margin-bottom: 1rem;
+  }
+
+  ul{
+    list-style: disc outside;
+  }
+}
+
+.news_cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+  grid-auto-rows: max-content;
+  gap: 1rem;
+  padding: 1rem 0;
+  justify-content: center;
+}
+
+.news_card{
+  background: var(--color-surf-0);
+  border-radius: var(--border-radius);
+  img{
+    width: 100%;
+    border-top-left-radius: var(--border-radius);
+    border-top-right-radius: var(--border-radius);
+  }
+
+  .title{
+    padding: 1rem;
+    font-size: 1.25rem;
+  }
+}
+
 .sectionPartners{
   padding: 1rem;
 }
