--- a/tstapp/templates/tstapp/about.html
+++ b/tstapp/templates/tstapp/about.html
@@ -47,8 +47,33 @@
     </a>
   </div>
   <div class="certs_card">
-    <a href="{% static 'tstapp/imgs/certs/martor.jpg' %}" target="_blank">
+    <a href="{% static 'tstapp/imgs/certs/velilla.jpg' %}" target="_blank">
       <img src="{% static 'tstapp/imgs/certs/velilla.jpg' %}" alt="">
+    </a>
+  </div>
+  <div class="certs_card">
+    <a href="{% static 'tstapp/imgs/certs/petrohse2025.jpeg' %}" target="_blank">
+      <img src="{% static 'tstapp/imgs/certs/petrohse2025.jpeg' %}" alt="">
+    </a>
+  </div>
+  <div class="certs_card">
+    <a href="{% static 'tstapp/imgs/certs/petrohse2025-1.jpeg' %}" target="_blank">
+      <img src="{% static 'tstapp/imgs/certs/petrohse2025-1.jpeg' %}" alt="">
+    </a>
+  </div>
+  <div class="certs_card">
+    <a href="{% static 'tstapp/imgs/certs/kiosh2025.jpeg' %}" target="_blank">
+      <img src="{% static 'tstapp/imgs/certs/kiosh2025.jpeg' %}" alt="">
+    </a>
+  </div>
+  <div class="certs_card">
+    <a href="{% static 'tstapp/imgs/certs/kiosh2025-1.jpeg' %}" target="_blank">
+      <img src="{% static 'tstapp/imgs/certs/kiosh2025-1.jpeg' %}" alt="">
+    </a>
+  </div>
+  <div class="certs_card">
+    <a href="{% static 'tstapp/imgs/certs/AtyrauOilGas2025.jpg' %}" target="_blank">
+      <img src="{% static 'tstapp/imgs/certs/AtyrauOilGas2025.jpg' %}" alt="">
     </a>
   </div>
 </section>
