--- a/tstapp/static/tstapp/css/style.css
+++ b/tstapp/static/tstapp/css/style.css
@@ -131,6 +131,12 @@ header{
   }
 }
 
+.quote{
+  font-style: italic;
+  text-align: center;
+  font-size: .8rem;
+}
+
 .side_search{
     display: flex;
     align-items: center;
