--- a/tstapp/templates/tstapp/contacts.html
+++ b/tstapp/templates/tstapp/contacts.html
@@ -15,7 +15,7 @@
       <h1>Звоните</h1>
       <p>По номеру телефона:</p>
       <p><a href="tel:+77057917089">Марина Sales Lead:  +7 705 791 7089</a></p>
-      <p><a href="tel:+77753650598">Захар Sales Manager:  +7 702 584 6640</a></p>
+      <p><a href="tel:+77753650598">Куаныш Sales Manager:  +7 775 365 0598</a></p>
       <p><a href="tel:+77753650598">Жамиля Sales Manager:  +7 778 005 6633</a></p>
       <br>
       <p>На Whatsapp:</p>
@@ -36,6 +36,7 @@
     <div class="adrs">
       <h1>Подписывайтесь</h1>
       <p>В Instagram: <a href="https://www.instagram.com/tst_group.kz" target="_blank"> @tst_group.kz</a></p>
+      <p>В Telegram: <a href="https://t.me/atyrauppe" target="_blank"> @atyrauppe</a></p>
     </div>
   </div>
   <div class="contacts-map">
