--- a/templates/base.html
+++ b/templates/base.html
@@ -125,7 +125,8 @@
     </div>
 
     <div class="socialLinks">
-      <a href="https://api.whatsapp.com/send/?phone=+77780056633" target="_blank"><img src="{% static 'tstapp/imgs/whatsapp.png' %}" alt=""></a>
+      <a href="https://wa.me/+77057917089" target="_blank"><img src="{% static 'tstapp/imgs/whatsapp.png' %}" alt=""></a>
+      <a href="https://t.me/atyrauppe" target="_blank"><img src="{% static 'tstapp/imgs/telegram.svg' %}" alt=""></a>
       <a href="https://www.instagram.com/tst_group.kz" target="_blank"><img src="{% static 'tstapp/imgs/instagram.png' %}" alt=""></a>
     </div>
     
