--- a/tstapp/static/tstapp/css/style.css
+++ b/tstapp/static/tstapp/css/style.css
@@ -206,16 +206,16 @@ footer{
   background: var(--color-primary);
   padding: 1rem;
   display: grid;
-  grid-template-columns: auto auto auto 5rem;
+  grid-template-columns: auto auto auto 8rem;
   gap: 1rem;
   margin: 2rem 1rem 1rem 1rem;
   border-radius: var(--border-radius);
 
   .socialLinks{
-    width: 5rem;
+    width: 8rem;
     display: grid;
     gap: 1rem;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     img {
       height: 2rem;
     }
